# esp32-androidtv

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  PLAN.md  README.md  package-lock.json  package.json  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32doit-devkit-v1.old
.github/workflows/: pr-title.yml  release.yml
components/nanopb/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  app_state.c  app_state.h  idf_component.yml  logbuf.c  logbuf.h  main.c  net_tls.c  net_tls.h  pairing.c  pairing.h  proto_frame.c  proto_frame.h  remote.c  remote.h  samsung_tv.c  samsung_tv.h  shortcuts.c  shortcuts.h  store.c  store.h  version.h  webserver.c  webserver.h  wifi.c  wifi.h
main/proto_gen/: appshortcuts.pb.c  appshortcuts.pb.h  polo.pb.c  polo.pb.h  remotemessage.pb.c  remotemessage.pb.h
proto/: appshortcuts.options  appshortcuts.proto  polo.options  remotemessage.options
test/: gen_golden.py  gen_pairing_oracle.py  golden.inc  golden_pairing.inc  test_frame.c
tools/: bump_version.sh  gen_cert.sh  gen_proto.sh  test_host.sh
web/: index.html
